--- a/src/app/modules/analysis-detail/analysis-detail.component.html
+++ b/src/app/modules/analysis-detail/analysis-detail.component.html
@@ -1,29 +1,33 @@
 <div class="container">
   <div class="row" dir="rtl">
-    <div class="col-lg-8 content_box">
+    <div class="col-lg-8 content_box" *ngFor="let item of postData">
       <div>
         <mat-card class="main-news">
-          <h1>عنوان خبر</h1>
-          <div class="sub_title">
-            <p>نویسنده</p>
-            <p>تاریخ</p>
-            <p>امتیاز</p>
-          </div>
-          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <h1>
+            {{item.title}}
+            <br>
+            <span class="with-icon">
+              <mat-icon style="font-size: 18px;">date_range</mat-icon>{{Date | date: 'yyyy/MM/dd'}}
+              <mat-icon style="margin-right:10%;font-size: 18px;">access_time</mat-icon>{{Date | date: 'h:mm'}}
+            </span>
+          </h1>
+
+          <img src="{{item.image}}" alt="{{item.image}}">
           <mat-card-content>
             <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quidem unde inventore soluta ab temporibus odit veniam, rerum dolorem voluptates dolores dolorum culpa magnam delectus vero ipsa officia necessitatibus molestias.
+              {{item.description}}
             </p>
           </mat-card-content>
-          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+
+          <img src="{{item.image1}}" alt="{{item.title}}">
           <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting.
+            <p [innerHtml]="item.content">
+            </p>
+          </mat-card-content>
+
+          <img src="{{item.image2}}" alt="{{item.title}}">
+          <mat-card-content>
+            <p [innerHtml]="item.content1">
             </p>
           </mat-card-content>
         </mat-card>
@@ -39,25 +43,17 @@
               مطالب مرتبط
             </h1>
           </div>
-          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
-          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and
-                </p>
-              </mat-card-content>
-            </mat-card>
+          <div class="col-lg-12 col-md-6 col-sm-6 col-12" *ngFor="let item of otherAnalysis">
+            <a href="/analysis/{{analysisType}}/{{item.id}}">
+              <mat-card class="example-card">
+                <img mat-card-image src="{{item.image}}" alt="{{item.title}}">
+                <mat-card-content>
+                  <p>
+                    {{item.title}}
+                  </p>
+                </mat-card-content>
+              </mat-card>
+            </a>
           </div>
         </div>
       </div>
@@ -102,9 +98,9 @@
         </h1>
 
         <mat-list role="list">
-          <mat-list-item role="listitem">
-            <a href="/news/article/id">
-              sklckjdsnlkjacs
+          <mat-list-item role="listitem" *ngFor="let item of newList">
+            <a href="/news/article/{{item.id}}">
+            {{item.title}}
             </a>
             <mat-divider style="width: 90%;margin-left: 5%;"></mat-divider>
           </mat-list-item>
