--- a/src/app/modules/analysis-detail/analysis-detail.component.scss
+++ b/src/app/modules/analysis-detail/analysis-detail.component.scss
@@ -164,12 +164,20 @@ h1{
 }
 
 @media screen and (max-width:820px) {
+
+  .content_box {
+    img {
+      width: 100%;
+      height: 250px;
+    }
+  }
+
   .sub_menu {
     .example-card {
       width: 109%;
       img {
         max-width: 400px;
-        height: 250px;
+        height: 150px;
       }
       mat-card-content {
         span {
@@ -190,7 +198,7 @@ h1{
       width: 110%;
       img {
         max-width: 400px;
-        height: 250px;
+        height: 150px;
       }
       mat-card-content {
         span {
