--- a/src/app/modules/list-items/dialog/dialog.component.scss
+++ b/src/app/modules/list-items/dialog/dialog.component.scss
@@ -5,6 +5,11 @@ h1 {
   color: red;
 }
 
+h2,h3,h4,h5,h6,p {
+  font-family: "BKoodakBold";
+  text-align: right;
+}
+
 button {
   font-family: "BKoodakBold";
 }
