--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -1,9 +1,11 @@
 <router-outlet></router-outlet>
 
 <div class="container" *ngIf="listDisplay">
-  <div class="row" dir="rtl">
+  <div class="row" dir="rtl" *ngIf="!empty">
     <div class="col-lg-12 title">
-      <h1>مجموعه عناوین</h1>
+      <h1 *ngIf="Type == 'learn'">لیست آموزش ها</h1>
+      <h1 *ngIf="Type == 'news'">لیست اخبار</h1>
+      <h1 *ngIf="Type == 'analysis'">لیست تحلیل ها</h1>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of editData">
       <mat-card class="example-card">
@@ -28,7 +30,29 @@
         </button>
       </mat-card>
     </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+      <div class="pagination">
+        <a (click)="getData(pageNumber - 1)">&laquo;</a>
 
+        <a *ngFor="let item of pageSize"
+           [ngClass]="pageNumber == item ? 'active' : ''"
+           (click)="getData(item)">{{item}}</a>
+
+        <a (click)="getData(pageNumber + 1)">&raquo;</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container" *ngIf="empty">
+  <div class="row">
+    <div class="col-lg-12">
+      <mat-card>
+        <mat-card-content style="height: 300px;">
+          <h1 style="text-align: center;padding-top: 15%;">پستی برای نمایش وجود ندارد</h1>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
 </div>
 
