--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
   <mat-accordion>
     <a href="/admin/users">
       <button mat-button class="dashboard">
-        اعضای سایت
+        کاربران
       </button>
     </a>
   </mat-accordion>
