--- a/src/app/modules/analysis-detail/analysis-detail.component.html
+++ b/src/app/modules/analysis-detail/analysis-detail.component.html
@@ -8,7 +8,7 @@
             <br>
             <span class="with-icon">
               <mat-icon style="font-size: 18px;">date_range</mat-icon>{{Date | date: 'yyyy/MM/dd'}}
-              <mat-icon style="margin-right:10%;font-size: 18px;">access_time</mat-icon>{{Date | date: 'h:mm'}}
+              <mat-icon style="margin-right:10%;font-size: 18px;">access_time</mat-icon>{{Date | date: 'hh:mm'}}
             </span>
           </h1>
 
