--- a/src/app/modules/table-page/table-page.component.html
+++ b/src/app/modules/table-page/table-page.component.html
@@ -70,10 +70,37 @@
 
         <!-- Weight Column -->
         <ng-container matColumnDef="delete">
-          <th mat-header-cell *matHeaderCellDef>حذف</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="edit_button">
             <button mat-raised-button color="warn" title="حذف" (click)="deleteUser(element.id)">
-              <mat-icon>delete_forever</mat-icon>
+              <mat-icon>delete_forever</mat-icon>حذف کاربر
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="edit_button">
+            <button mat-raised-button color="primary" title="ویرایش" (click)="editUser()">
+              <mat-icon>edit</mat-icon>ویرایش
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="pass">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="edit_button">
+            <button mat-raised-button color="accent" title="تغییر رمز" (click)="changeUserPassword(element.id)">
+              <mat-icon>https</mat-icon>تغییر رمز
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="menu">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="menu_button">
+            <button mat-icon-button color="primary" title="منو" (click)="openMenu(element.id)" style="margin-top: 8%;">
+              <mat-icon>edit</mat-icon>
             </button>
           </td>
         </ng-container>
@@ -84,4 +111,3 @@
     </div>
   </div>
 </div>
-
