--- a/src/app/modules/table-page/table-page.component.scss
+++ b/src/app/modules/table-page/table-page.component.scss
@@ -3,6 +3,14 @@
   margin-bottom: 5%;
 }
 
+.menu_button {
+  display: none;
+}
+
+button {
+  font-family: "BKoodakBold";
+}
+
 mat-form-field{
   font-family: "BKoodakBold";
   mat-label {
@@ -26,4 +34,13 @@ table {
   width: 100%;
   margin-top: 2%;
   margin-bottom: 2%;
+}
+
+@media screen and (max-width:820px) {
+  .edit_button {
+    display: none;
+  }
+  .menu_button {
+    display: block;
+  }
 }
