adding three section for delete edit change password and menu to the dialog

--- a/src/app/modules/table-page/dialog-table/dialog-table.component.html
+++ b/src/app/modules/table-page/dialog-table/dialog-table.component.html
@@ -1,6 +1,6 @@
 <!-- delete user section  -->
 
-<div class="container" dir="rtl" *ngIf="dialogType == 'deleteUser'">
+<div class="container delete_user" dir="rtl" *ngIf="dialogType == 'deleteUser'">
   <div class="row" *ngFor="let item of userData">
     <div class="col-lg-12">
       <h2>نام کاربری</h2>
@@ -24,6 +24,47 @@
 </div>
 
 <!-- edit user section  -->
+<div class="container" *ngIf="dialogType == 'editUser'">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1>تغییر اطلاعات کاربر</h1>
+    </div>
+    <form class="example-form">
+      <div class="col-lg-12">
+        <mat-form-field class="example-full-width">
+          <mat-label>نام جدید</mat-label>
+          <input matInput placeholder="نام را وارد نمایید">
+        </mat-form-field>
+      </div>
+      <div class="col-lg-12">
+        <mat-form-field class="example-full-width">
+          <mat-label>نام خانوادگی رمز</mat-label>
+          <input matInput placeholder="نام خانوادگی را تکرار نمایید">
+        </mat-form-field>
+      </div>
+      <div class="col-lg-12">
+        <label class="custom-file-upload">
+          <input type="file" (change)="uploadFile($event)">
+          آپلود عکس
+        </label>
+      </div>
+      <div class="col-lg-12">
+        <div class="image_box">
+          <img [src]="imageSrc" *ngIf="imageSrc != ''" >
+        </div>
+      </div>
+      <div class="col-lg-12 edit_buttons">
+        <button mat-raised-button color="warn" title="تغییر">
+          اعمال تغییرات
+        </button>
+        <button mat-raised-button color="primary" title="بازگشت" class="return" matDialogClose>
+          بازگشت
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+
 
 <!-- change password section  -->
 <div class="container" *ngIf="dialogType == 'changePassword'">
@@ -57,10 +98,22 @@
 </div>
 
 <!-- menu section  -->
-<div class="container">
+<div class="container" *ngIf="dialogType == 'menu'">
   <div class="row">
-    <div class="col-lg-12">
-
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 menu_buttons">
+      <button mat-raised-button color="warn" title="حذف" (click)="menuClick('delete')">
+        <mat-icon>delete_forever</mat-icon>حذف کاربر
+      </button>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 menu_buttons" (click)="menuClick('edit')">
+      <button mat-raised-button color="primary" title="ویرایش">
+        <mat-icon>edit</mat-icon>ویرایش
+      </button>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 menu_buttons" (click)="menuClick('password')">
+      <button mat-raised-button color="accent" title="تغییر رمز">
+        <mat-icon>https</mat-icon>تغییر رمز
+      </button>
     </div>
   </div>
 </div>
