adding sabad kharid to the side nav

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -132,4 +132,30 @@
     </mat-expansion-panel>
   </mat-accordion>
 
+  <mat-accordion>
+    <mat-expansion-panel>
+
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          سبد خرید
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <a>
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          تحلیل های من
+        </button>
+      </a>
+
+      <a>
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          ویدئو های من
+        </button>
+      </a>
+
+    </mat-expansion-panel>
+  </mat-accordion>
+
 </mat-nav-list>
