--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -12,43 +12,56 @@
 
         <form class="example-form">
           <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="col-lg-6 col-md-6 col-sm-10 col-12">
+              <mat-form-field class="example-half-width">
+                <mat-label>نام</mat-label>
+                <input matInput type="text" [(ngModel)]="name" name="name" placeholder="نام خود را وارد نمایید">
+              </mat-form-field>
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-10 col-12">
+              <mat-form-field class="example-half-width">
+                <mat-label>نام خانوادگی</mat-label>
+                <input matInput type="text" [(ngModel)]="family" name="family" placeholder="نام خانوادگی خود را وارد نمایید">
+              </mat-form-field>
+            </div>
+
+            <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="mobileError != ''">
+              <p>{{mobileError}}</p>
+            </div> -->
+            <br>
+
+            <div class="col-lg-6 col-md-6 col-sm-10 col-12">
+              <mat-form-field class="example-half-width">
+                <mat-label>پسورد</mat-label>
+                <input matInput type="password" [(ngModel)]="password" name="password" placeholder="پسورد خود را وارد نمایید">
+              </mat-form-field>
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-10 col-12">
+              <mat-form-field class="example-half-width">
+                <mat-label>تکرار پسورد</mat-label>
+                <input matInput type="password" [(ngModel)]="conf_password" name="confirm" placeholder="پسورد خود را تکرار کنید">
+              </mat-form-field>
+            </div>
+
+            <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="passwordError != ''">
+              <p>{{passwordError}}</p>
+            </div> -->
+
+            <div class="col-lg-12 col-md-12 col-sm-10 col-12">
               <mat-form-field class="example-full-width">
                 <mat-label>موبایل</mat-label>
                 <input matInput type="text" [(ngModel)]="mobile" name="mobile" placeholder="شماره موبایل خود را وارد نمایید">
               </mat-form-field>
             </div>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="mobileError != ''">
-              <p>{{mobileError}}</p>
-            </div>
-
-            <br>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-              <mat-form-field class="example-full-width">
-                <mat-label>پسورد</mat-label>
-                <input matInput type="password" [(ngModel)]="password" name="password" placeholder="پسورد خود را وارد نمایید">
-              </mat-form-field>
-            </div>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="passwordError != ''">
-              <p>{{passwordError}}</p>
-            </div>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-              <mat-form-field class="example-full-width">
-                <mat-label>تکرار پسورد</mat-label>
-                <input matInput type="password" [(ngModel)]="conf_password" name="confirm" placeholder="پسورد خود را تکرار کنید">
-              </mat-form-field>
-            </div>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="confPasswordError != ''">
+            <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="confPasswordError != ''">
               <p>{{confPasswordError}}</p>
-            </div>
+            </div> -->
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-              <mat-form-field class="example-half-width">
+              <mat-form-field class="example-half-width captcha_code">
                 <mat-label>کدامنیتی</mat-label>
                 <input matInput type="text" [(ngModel)]="captcha" name="captcha" placeholder="کد را وارد نمایید">
               </mat-form-field>
