--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,14 +11,14 @@
   </mat-accordion>
 
   <mat-accordion>
-    <a href="/admin/users">
+    <a href="/admin/users" *ngIf="isAdmin">
       <button mat-button class="dashboard">
         کاربران
       </button>
     </a>
   </mat-accordion>
 
-  <mat-accordion>
+  <mat-accordion *ngIf="isAdmin">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -56,7 +56,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <mat-accordion>
+  <mat-accordion *ngIf="isAdmin">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -88,7 +88,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <mat-accordion>
+  <mat-accordion *ngIf="isAdmin">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -120,7 +120,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <mat-accordion>
+  <mat-accordion *ngIf="isAdmin">
     <mat-expansion-panel>
 
       <mat-expansion-panel-header>
