adding little description from footer to contact us

--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -31,7 +31,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-12 explanation">
             <div class="content">
               <mat-icon>person</mat-icon>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae exercitationem iure itaque quasi officia dicta nemo id omnis atque eveniet debitis, aspernatur accusantium assumenda et tempore illo dolore odio dolorum.</p>
+              <p>تیم <b>lowrisk</b> گروهی متشکل از متخصصان حوزه مالی است که با مطالعه و رصد بازارهای مالی، سعی در جهت بهبود راه کارهای سرمایه گذاری در تمامی بازار های مالی از قبیل سهام، صندوق‌های سرمایه‌گذاری، ارز دیجیتال، اوراق بدهی و …را دارد.</p>
             </div>
 
             <div class="my_email">
