add profile to project and route it in /admin/profile

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -141,7 +141,7 @@
                   پنل کاربری
                 </button>
               </a>
-              <a style="color:black;text-decoration:none;">
+              <a href="/admin/profile" style="color:black;text-decoration:none;">
                 <button mat-menu-item *ngIf="isAdmin">
                 <mat-icon>account_box</mat-icon>
                 پروفایل
