--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -4,7 +4,6 @@ h1,h2,h3,h4,h5 {
 }
 
 a,p {
-  text-align: right;
   font-family: "BKoodakBold";
 }
 
@@ -32,6 +31,26 @@ h2 {
   margin-top: 5%;
 }
 
+.review_icon {
+  mat-icon {
+    font-size: 16px;
+    margin-left: -1%;
+  }
+}
+
+.mat-icon{
+  font-family: 'Material Icons' !important;
+  font-size: 18px;
+}
+
+.with-icon {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  font-family: "BKoodakBold";
+  color: rgb(95, 94, 94);
+}
+
 // =============================================================================
 // main news
 // =============================================================================
@@ -50,10 +69,6 @@ h2 {
       font-family: "BKoodakBold";
       text-align: right;
       padding-top: 2%;
-    }
-
-    p:hover {
-      color: rgb(5, 128, 199);
     }
   }
   .main-news img {
@@ -126,10 +141,6 @@ h2 {
       font-family: "BKoodakBold";
       text-align: right;
     }
-
-    p:hover {
-      color: rgb(5, 128, 199);
-    }
   }
 }
 
@@ -150,9 +161,6 @@ h2 {
         font-family: "BKoodakBold";
         text-align: right;
         padding-top: 2%;
-      }
-      p:hover {
-        color: rgb(5, 128, 199);
       }
     }
 
@@ -291,6 +299,13 @@ h2 {
   .sub_video div{
     padding-bottom: 5%;
   }
+
+  .review_icon {
+    mat-icon {
+      font-size: 16px;
+      margin-left: -7%;
+    }
+  }
 }
 
 @media screen and (max-width:576px) {
@@ -342,6 +357,13 @@ h2 {
         width: 100%;
         height: 200px;
       }
+    }
+  }
+
+  .review_icon {
+    mat-icon {
+      font-size: 16px;
+      margin-left: -15%;
     }
   }
 }
