changing the icons

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -28,28 +28,28 @@
 
       <a href="/admin/learn/post/film">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>play_circle_outline</mat-icon>
           اضافه کردن ویدئو
         </button>
       </a>
 
       <a href="/admin/learn/post/file">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>attach_file</mat-icon>
           اضافه کردن فایل
         </button>
       </a>
 
       <a href="/admin/learn/post/article">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>assignment</mat-icon>
           اضافه کردن مقاله
         </button>
       </a>
 
       <a href="/admin/learn/post/list">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>list</mat-icon>
           لیست اموزش ها
         </button>
       </a>
@@ -66,21 +66,21 @@
 
       <a href="/admin/news/post/article">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>assignment</mat-icon>
           اضافه کردن خبر
         </button>
       </a>
 
       <a href="/admin/news/post/film">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>play_circle_outline</mat-icon>
           اضافه کردن ویدئو
         </button>
       </a>
 
       <a href="/admin/news/post/list">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>list</mat-icon>
           لیست خبر ها
         </button>
       </a>
@@ -98,21 +98,21 @@
 
       <a href="/admin/analysis/post/free">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>money_off</mat-icon>
           اضافه کردن تحلیل رایگان
         </button>
       </a>
 
       <a href="/admin/analysis/post/monetary">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>attach_money</mat-icon>
           اضافه کردن تحلیل پولی
         </button>
       </a>
 
       <a  href="/admin/analysis/post/list">
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>list</mat-icon>
           لیست تحلیل ها
         </button>
       </a>
@@ -143,14 +143,14 @@
 
       <a>
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>assessment</mat-icon>
           تحلیل های من
         </button>
       </a>
 
       <a>
         <button mat-button>
-          <mat-icon>add</mat-icon>
+          <mat-icon>play_circle_outline</mat-icon>
           ویدئو های من
         </button>
       </a>
