--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -2,6 +2,10 @@
   margin-left: 8px;
 }
 
+.mat-icon{
+  font-family: 'Material Icons' !important;
+}
+
 .dashboard {
   width: 100%;
   text-align: right;
