--- a/src/app/modules/learn/learn.component.html
+++ b/src/app/modules/learn/learn.component.html
@@ -4,11 +4,17 @@
       <div>
         <mat-card class="main-news">
           <h1>{{item.title}}</h1>
-          <br>
-          <span class="with-icon">
-            <mat-icon style="font-size: 18px;">date_range</mat-icon>{{Date | date: 'yyyy/MM/dd'}}
-            <mat-icon style="margin-right:10%;font-size: 18px;">access_time</mat-icon>{{Date | date: 'hh:mm'}}
-          </span>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 with-icon">
+              <mat-icon style="font-size: 18px;">date_range</mat-icon>{{item.created_at | date: 'yyyy/MM/dd'}}
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 with-icon">
+              <mat-icon style="margin-right:10%;font-size: 18px;">access_time</mat-icon>{{item.created_at | date: 'hh:mm'}}
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+
+            </div>
+          </div>
           <img src="{{item.image}}" alt="{{item.title}}">
           <mat-card-content>
             <p>
