--- a/src/app/modules/learn/learn.component.scss
+++ b/src/app/modules/learn/learn.component.scss
@@ -27,6 +27,10 @@ h1{
   display: flex;
   align-items: center;
   margin-bottom: 3%;
+  color: rgb(121, 120, 120);
+  mat-icon{
+    font-size: 18px;
+  }
 }
 
 .sticky-top h1 {
