--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -10,6 +10,12 @@ ul li {
   height: 40px;
 }
 
+.userAvatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+
 span, button {
   font-family: "BKoodakBold";
   font-size: 17px;
