add report to side nav

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -158,4 +158,23 @@
     </mat-expansion-panel>
   </mat-accordion>
 
+  <mat-accordion>
+    <mat-expansion-panel>
+
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          گزارشات
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <a>
+        <button mat-button>
+          <mat-icon>attach_money</mat-icon>
+          گزارشات مالی
+        </button>
+      </a>
+
+    </mat-expansion-panel>
+  </mat-accordion>
+
 </mat-nav-list>
